# telemetry-specs

./: .gitignore  .gitreview  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst
specs/: template.rst
specs/juno/: arithmetic-transformer.rst  big-data-sql-v2.rst  ceilometer-meter-fwaas.rst  ceilometer-meter-vpnaas.rst  ceilometer_client_keystone_v2_v3_update.rst  central-agent-ha.rst  central-agent-partitioning.rst  dedicated-alarm-database.rst  dispatcher-for-gnocchi-integration.rst  gnocchi.rst  grenade-resource-survivability.rst  grenade-upgrade-testing.rst  hbase-events-feature.rst  ipmi.rst  ironic-notifications.rst  lbaas_metering.rst  mongodb-events-feature.rst  osprofiler_plugin.rst  paas-event-format-for-ceilometer.rst  quotas-on-alarms.rst  snmp-improvement.rst  xenapi-support.rst
specs/kilo/: add-new-cinder-notifications.rst  ceilometer-alarm-level.rst  ceilometer-configuration-via-data-store.rst  ceilometer-pagination.rst  ceilometer-rbac.rst  ceilometer_ceph_integration.rst  ceilometermiddleware.rst  declarative-http-tests.rst  dedicated-event-db.rst  disk-info-meters.rst  elasticsearch-event-db.rst  event-database-ttl.rst  fake.rst  http-dispatcher.rst  hyper-v-disk-iops-metrics.rst  hyper-v-disk-latency-metrics.rst  hyper-v-memory-metrics.rst  instance-autorestart.rst  kafka-publisher.rst  libvirt-memory-resident.rst  libvirt-memory-utilization-inspector.rst  magnetodb-notifications.rst  notification-coordiation.rst  (+7 more)
tests/: test_titles.py
(+36 files in other folders)
