[metadata]
name = telemetry-specs
summary = Telemetry specs repository
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://specs.openstack.org/openstack/telemetry-specs/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
